What's new?
===========

Prototype 4-dev1
----------------

- Breaks backwards compatibility to older versions!
- CATs now skid when touching the ground at high speeds
  and not etherboarding.


Prototype 3+dev9
----------------

- Change color rule for weapons that bypass damage buffers from
  orange/cyan to orange/green and update sniper rifle visuals accordingly.
- Incorporate no-disc grace period into new "barrier" mechanic:
    - CAT's have a damage buffer and a "complementary barrier".
    - Orange/green projectiles bypass the damage buffer.
    - Red/blue projectiles bypass the barrier.
    - The barrier is only activated when a CAT was hit by
      a orange/green projectile or is being attacked by a disc.
    - When a CAT's barrier has been activated, the CAT is not
      affected by orange/green projectiles until the barrier
      has completely faded away.



Prototype 3+dev8
----------------

- Replaced grenade launcher with mine launcher.
- Handicap feature allows players to give a fair
  chance to less experienced players.
- Increase Blaster armor cost from 2 to 4 and 
  drop the "b00nstick" name.


Prototype 3+dev6
----------------

- Newbie helper
- Improved arena window
- Regeneration modules now only heal when standing still.
- Weapon tweaks:
	- Battle Rifle projectiles no longer bypass damage buffers but
	  again do 30 instead of 25 damage per projectile. The influence
	  of the shooter's momentum on the projectile's trajectory has
	  also been increased.
	- Grenade launcher grenades don't bounce anymore and their armor
	  cost has been decreased from 15 to 8.
- Bugfixes
Client changes:
	- Improved demo playback


Prototype 3-testing
-------------------

Released: Apr. 26, 2011

- Breaks backwards compatibility to older versions!
- Somewhat improved performance (still requires way too 
  much horsepower for the way it looks).
- Damaging enemies again increases/restores a player's health,
  but unlike before, damaging enemies' damage buffers 