@@ -9,7 +9,7 @@
 //-----------------------------------------------------------------------------
 
 $GameNameString = "rotc-ethernet";
-$GameVersionString = "p.4-dev1";
+$GameVersionString = "p.4-dev2";
 
 //------------------------------------------------------------------------------
 
